Використання методології ВЕМ і препроцесора SASS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
     <header class="head">
         <div class="container header">
-            <a href="./index.html" class="logo-primary">
+            <a href="./index.html" class="logo--primary">
                 <span class="logo-header">Web</span>Studio</a>
 
             <nav>
@@ -396,7 +396,7 @@
   <footer class="footer">
     <div class="container footer-container">
       <div class="address-container">
-        <a href="./index.html" class="logo-secondary"><span class="logo-header">Web</span>Studio</a>
+        <a href="./index.html" class="logo--secondary"><span class="logo-header">Web</span>Studio</a>
         <address class="address">
           <ul class="contacts-footer">
             <li class="contacts-footer__item">
